--- a/learn/templates/home.html
+++ b/learn/templates/home.html
@@ -115,6 +115,106 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="card card-small h-100">
+                  <div class="card-header border-bottom">
+                    <h6 class="m-0">Users by device</h6>
+                  </div>
+                  <div class="card-body d-flex py-0">
+                    <canvas height="220" class="blog-users-by-device m-auto"></canvas>
+                  </div>
+                  <div class="card-footer border-top">
+                    <div class="row">
+                      <div class="col">
+                        <select class="custom-select custom-select-sm" style="max-width: 130px;">
+                          <option selected>Last Week</option>
+                          <option value="1">Today</option>
+                          <option value="2">Last Month</option>
+                          <option value="3">Last Year</option>
+                        </select>
+                      </div>
+                      <div class="col text-right view-report">
+                        <a href="#">Full report &rarr;</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="card card-small h-100">
+                  <div class="card-header border-bottom">
+                    <h6 class="m-0">Users by device</h6>
+                  </div>
+                  <div class="card-body d-flex py-0">
+                    <canvas height="220" class="blog-users-by-device m-auto" id="test"></canvas>
+                  </div>
+                  <div class="card-footer border-top">
+                    <div class="row">
+                      <div class="col">
+                        <select class="custom-select custom-select-sm" style="max-width: 130px;">
+                          <option selected>Last Week</option>
+                          <option value="1">Today</option>
+                          <option value="2">Last Month</option>
+                          <option value="3">Last Year</option>
+                        </select>
+                      </div>
+                      <div class="col text-right view-report">
+                        <a href="#">Full report &rarr;</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="card card-small h-100">
+                  <div class="card-header border-bottom">
+                    <h6 class="m-0">Users by device</h6>
+                  </div>
+                  <div class="card-body d-flex py-0">
+                    <canvas height="220" class="blog-users-by-device m-auto"></canvas>
+                  </div>
+                  <div class="card-footer border-top">
+                    <div class="row">
+                      <div class="col">
+                        <select class="custom-select custom-select-sm" style="max-width: 130px;">
+                          <option selected>Last Week</option>
+                          <option value="1">Today</option>
+                          <option value="2">Last Month</option>
+                          <option value="3">Last Year</option>
+                        </select>
+                      </div>
+                      <div class="col text-right view-report">
+                        <a href="#">Full report &rarr;</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="card card-small h-100">
+                  <div class="card-header border-bottom">
+                    <h6 class="m-0">Users by device</h6>
+                  </div>
+                  <div class="card-body d-flex py-0">
+                    <canvas height="220" class="blog-users-by-device m-auto"></canvas>
+                  </div>
+                  <div class="card-footer border-top">
+                    <div class="row">
+                      <div class="col">
+                        <select class="custom-select custom-select-sm" style="max-width: 130px;">
+                          <option selected>Last Week</option>
+                          <option value="1">Today</option>
+                          <option value="2">Last Month</option>
+                          <option value="3">Last Year</option>
+                        </select>
+                      </div>
+                      <div class="col text-right view-report">
+                        <a href="#">Full report &rarr;</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- End New Draft Component -->
               <div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >缃戠珯寤鸿</a></div>
             </div>
@@ -134,6 +234,61 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
     <script src="../../static/js/extras.1.1.0.min.js"></script>
     <script src="../../static/js/shards-dashboards.1.1.0.min.js"></script>
-    <script src="../../static/js/app/app-blog-overview.1.1.0.js"></script>
+    <!-- <script src="../../static/js/app/app-blog-overview.1.1.0.js"></script> -->
+    <script type="text/javascript">
+var dom = document.getElementById("test");
+var myChart = echarts.init(dom);
+var app = {};
+option = null;
+app.title = '坐标轴刻度与标签对齐';
+
+option = {
+    color: ['#3398DB'],
+    tooltip : {
+        trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis : [
+        {
+            type : 'category',
+            data : ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun', 'Fri', 'Sat', 'Sun', 'Sat', 'Sun', 'Fri', 'Sat', 'Sun',],
+            axisTick: {
+                alignWithLabel: true
+            }
+        }
+    ],
+    yAxis : [
+        {
+            type : 'value'
+        }
+    ],
+    series : [
+        {
+            name:'次数',
+            type:'bar',
+            barWidth: '60%',
+            data:[10, 52, 200, 334, 390, 330, 220, 390, 330, 220, 330, 220, 390, 330, 220,]
+        },
+        {
+            name:'次数',
+            type:'line',
+            barWidth: '60%',
+            data:[10, 52, 200, 334, 390, 330, 220, 390, 330, 220, 330, 220, 390, 330, 220,]
+        }
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
   </body>
 </html>
