--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -110,7 +110,7 @@
         top:0px;
     }
 
-    .left{width:540px;}
+    .left{max-width:540px;min-width: 200px;width: 100%}
     .right{position:absolute;right:10px;width:520px;}
 
     #p2_s1{
@@ -593,22 +593,22 @@
                     </div>
                 </div>
                 <div class="container" style="position:absolute;width:100%;height:100%;">
-                    <div class="column" style="position:absolute;top:9%;left:25%;">
+                    <div class="column" style="position:absolute;top:9%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-1" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.005em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:9%;left:68%;">
+                    <div class="column" style="position:absolute;top:9%;left:43%;">
                         <button class="md-trigger" data-modal="modal-p3-2" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:40%;left:25%;">
+                    <div class="column" style="position:absolute;top:40%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-3" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:72%;left:25%;">
+                    <div class="column" style="position:absolute;top:72%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-4" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:61%;left:68%;">
+                    <div class="column" style="position:absolute;top:61%;left:43%;">
                         <button class="md-trigger" data-modal="modal-p3-5" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:52%;left:96%;">
+                    <div class="column" style="position:absolute;top:52%;left:71%;">
                         <button class="md-trigger" data-modal="modal-p3-6" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
                 </div>
@@ -913,8 +913,139 @@ if (option && typeof option === "object") {
 
 <!-- 弹出层结束 -->
 <!-- page3 -->
+<!-- 编程散点 -->
+
+<!-- 散点图 -->
 <script type="text/javascript">
-    var dom = document.getElementById("p3_s2");
+var dom = document.getElementById("p3_s2");
+var myChart = echarts.init(dom, 'walden');
+var app = {};
+option = null;
+var option = {
+    title : {
+        text: "不同评分下评分人数与短评数",
+        x:'center'
+    },
+    grid: {
+        left: "3%",
+        right: "4%",
+        bottom: "3%",
+        containLabel: true
+    },
+    tooltip : {
+        trigger: "item",
+        showDelay : 0,
+        formatter : function (params) {
+            if (params.value.length > 1) {
+                return params.seriesName + " :<br/>"
+                   + params.value[0] + "分"
+                   + params.value[1] + "人 ";
+            }
+            else {
+                return params.seriesName + " :<br/>"
+                   + params.name + " : "
+                   + params.value + "人";
+            }
+        },
+        axisPointer:{
+            show: true,
+            type : "cross",
+            lineStyle: {
+                type : "dashed",
+                width : 1
+            }
+        }
+    },
+    legend: {
+        data: ["评分人数, 想读"],
+        left: "right"
+    },
+    xAxis : [
+        {
+            type : "value",
+            scale:true,
+
+            
+            axisLabel : {
+                formatter: "{value}"
+            },
+            splitLine: {
+                lineStyle: {
+                    type: "dashed"
+                }
+            }
+        }
+    ],
+    yAxis : [
+        {
+            type : "value",
+            scale:true,
+            min: 0,
+            max: 100000,
+            axisLabel : {
+                formatter: "{value}"
+            },
+            splitLine: {
+                lineStyle: {
+                    type: "dashed"
+                }
+            }
+        }
+    ],
+    series : [
+        {
+            name:"评分人数",
+            type:"scatter",
+            data: [
+            {% for i in computer %}
+
+            [{{ i.score }}, {{i.number}}], 
+            {% endfor %}
+            ],
+            markPoint : {
+                data : [
+                    {type : "max", name: "最大值"},
+                    {type : "min", name: "最小值"}
+                ]
+            },
+            markLine : {
+                data : [
+                    {type : "average", name: "平均值"}
+                ]
+            }
+        },
+        {
+            name:"想读",
+            type:"scatter",
+            data: [
+            {% for i in computer %}
+
+            [{{ i.score }}, {{i.read}}], 
+            {% endfor %}
+            ],
+            markPoint : {
+                data : [
+                    {type : "max", name: "最大值"},
+                    {type : "min", name: "最小值"}
+                ]
+            },
+            markLine : {
+                data : [
+                    {type : "average", name: "平均值"}
+                ]
+            }
+        },
+        
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+       </script>
+<!-- p3s2 -->
+<script type="text/javascript">
+    var dom = document.getElementById("p3_x3");
     var myChart = echarts.init(dom, 'walden');
     var app = {};
     option = null;
@@ -927,7 +1058,7 @@ if (option && typeof option === "object") {
     },
     legend: {
         data: [
-        {% for i in score_index %}
+        {% for i in score_index1 %}
         '{{ i.basic }}',
         {% endfor %}
         ]
@@ -940,7 +1071,7 @@ if (option && typeof option === "object") {
         type: 'value'
     },
     series: [
-    {% for i in score_index%}
+    {% for i in score_index1 %}
     {   
         name: '{{ i.basic }}',
         type:'line',
@@ -1168,7 +1299,7 @@ if (option && typeof option === "object") {
     },
     legend: {
         data: [
-        {% for i in score_index %}
+        {% for i in score_index2 %}
         '{{ i.basic }}',
         {% endfor %}
         ]
@@ -1187,7 +1318,7 @@ if (option && typeof option === "object") {
         data: ['4分以下','4-5分','5-6分','6-7分','7-8分','8-9分','9分以上']
     },
     series: [
-    {% for i in score_index%}
+    {% for i in score_index2 %}
     {
         name:'{{ i.basic }}',
         type:'bar',
