--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -239,7 +239,7 @@
         position:absolute;
         background: rgba(239, 247, 250, 1);
         border-radius: 10px;
-        top:80px;left:560px;
+        top:80px;left:10px;
         height:480px;
         width:820px;
     }
@@ -248,7 +248,8 @@
         top: 80px;
         background: rgba(239, 247, 250, 1);
         border-radius: 10px;
-        height:380px;
+        height:480px;
+        width: 1070px;
     }
     #p3_x1{
         position:absolute;
@@ -261,15 +262,17 @@
         position:absolute;
         background: rgba(239, 247, 250, 1);
         border-radius: 10px;
-        top:570px;left:560px;
+        top:570px;left:10px;
         height:350px;
         width:820px;
     }
     #p3_x3{
         background: rgba(239, 247, 250, 1);
         border-radius: 10px;
-        top:470px;
-        height:400px;
+        top:570px;
+        height:350px;
+        width: 1070px;
+
     }
     #p3_x2 #x2_1{
         position:absolute;
@@ -593,23 +596,23 @@
                     </div>
                 </div>
                 <div class="container" style="position:absolute;width:100%;height:100%;">
-                    <div class="column" style="position:absolute;top:9%;left:0%;">
+                    <!-- <div class="column" style="position:absolute;top:9%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-1" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.005em;z-index: 1000;">Show</button>
-                    </div>
-                    <div class="column" style="position:absolute;top:9%;left:43%;">
-                        <button class="md-trigger" data-modal="modal-p3-2" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
-                    </div>
-                    <div class="column" style="position:absolute;top:40%;left:0%;">
+                    </div> -->
+                        <div class="column" style="position:absolute;top:9%;left:39%;">
+                            <button class="md-trigger" data-modal="modal-p3-2" style="position:absolute;left: 0;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                        </div>
+                    <!-- <div class="column" style="position:absolute;top:40%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-3" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
-                    </div>
-                    <div class="column" style="position:absolute;top:72%;left:0%;">
+                    </div> -->
+                    <!-- <div class="column" style="position:absolute;top:72%;left:0%;">
                         <button class="md-trigger" data-modal="modal-p3-4" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    </div> -->
+                    <div class="column" style="position:absolute;top:61%;left:39%;">
+                        <button class="md-trigger" data-modal="modal-p3-5" style="position:absolute;left: 0;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
-                    <div class="column" style="position:absolute;top:61%;left:43%;">
-                        <button class="md-trigger" data-modal="modal-p3-5" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
-                    </div>
-                    <div class="column" style="position:absolute;top:52%;left:71%;">
-                        <button class="md-trigger" data-modal="modal-p3-6" style="position:absolute;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
+                    <div class="column" style="position:absolute;top:61%;right: 6%;">
+                        <button class="md-trigger" data-modal="modal-p3-6" style="position:absolute;left: 0;background: #848FFD;border-radius: 10px;font-size: 0.05em;z-index: 1000;">Show</button>
                     </div>
                 </div>
 
@@ -617,13 +620,13 @@
                 <!-- <p style="position:absolute;top:10px;right:350px"><img width="80%" height="80%" src="../../static/img/全部数据.png"></p> -->
                 <!-- <p style="position:absolute;top:10px;right:50px"><img width="80%" height="80%" src="../../static/img/有效数据.png"></p> -->
                 <button class="md-close" style="position: absolute;top:10px;right:350px;border-radius: 10px;font-size: 1.5em;background: #848FFD;">全部数据:{{ counts }}</button>
-                <div id="p3_s1" class="left">
+<!--                 <div id="p3_s1" class="left">
 
-                </div>
+                </div> -->
 
-                <div id="p3_s2">  </div>
-                <div id="p3_s3" class="right">  </div>
-                <div id="p3_x1" class="left">  </div>
+                <div id="p3_s2"><!--  <a href="http://127.0.0.1:8000/score"><img src="../../static/img/all_score.png"  width="100%" height="100%"> </a>  --> </div>
+                <div id="p3_s3" class="right"><a href="http://127.0.0.1:8000/programs"><img src="../../static/img/program.png"  width="100%" height="100%"> </a> </div>
+                <!-- <div id="p3_x1" class="left">  </div> -->
                 <div id="p3_x2">
                     <div id="x2_1">
 
@@ -636,7 +639,7 @@
                     </div>
                 </div>
                 <div id="p3_x3" class="right">  </div>
-                <div id="p3_z1" class="left">  </div>
+                <!-- <div id="p3_z1" class="left">  </div> -->
 
             </div>
 
@@ -933,6 +936,10 @@ var option = {
         containLabel: true
     },
     tooltip : {
+        show: true,
+        feature: {
+            saveAsImage: {show: true}
+        },
         trigger: "item",
         showDelay : 0,
         formatter : function (params) {
@@ -957,8 +964,8 @@ var option = {
         }
     },
     legend: {
-        data: ["评分人数, 想读"],
-        left: "right"
+        data: ["评分人数", "想读"],
+        x: "left"
     },
     xAxis : [
         {
