--- a/learn/templates/index.html
+++ b/learn/templates/index.html
@@ -411,7 +411,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>作者国籍占比饼图</h3>
+                                <h3>热门出版社出版数目与平均评分人数</h3>
                                 <div  id="p2_x1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                             </div>
                             <button class="md-close" style="position: relative;border-radius: 10px;font-size: 0.1em;background: #c0392b;">Close</button>
@@ -423,7 +423,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>作者国籍雷达图</h3>
+                                <h3>热门出版社平均评分</h3>
                                 <div  id="p2_z1_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                                 
                             </div>
@@ -436,7 +436,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>不同评分下基本信息对比</h3>
+                                <h3>不同国籍评分人数、已读人数、平均评分</h3>
                                 <div  id="p2_x2_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                                 
                             </div>
@@ -449,7 +449,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>不同评分下已读、想读、在读人数</h3>
+                                <h3>作者国籍分布饼图</h3>
                                 <div  id="p2_x3_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                                 
                             </div>
@@ -573,7 +573,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>不同国籍作者对应评分等信息</h3>
+                                <h3>不同评分下各参数对比</h3>
                                 <div  id="p3_x2_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                                 
                             </div>
@@ -586,7 +586,7 @@
                     <div class="md-content" style="position:absolute;width:100%;height:100%;">
                         <div class="md-content" style="position:absolute;width:100%;height:100%;min-height:500px;background: rgba(0,0,0,0.5);">
                             <div style="position:relative;left:20%;width:60%;height:800px;">
-                                <h3>作者国籍分布饼图</h3>
+                                <h3>不同评分下各参数对比</h3>
                                 <div  id="p3_x3_show" style="position:relative;left:10%;width:80%;height:80%"></div>
                                 
                             </div>
@@ -624,7 +624,7 @@
 
                 </div> -->
 
-                <div id="p3_s2"><!--  <a href="http://127.0.0.1:8000/score"><img src="../../static/img/all_score.png"  width="100%" height="100%"> </a>  --> </div>
+                <div id="p3_s2"> <a href="http://127.0.0.1:8000/score"><img src="../../static/img/all_score.png"  width="100%" height="100%"> </a>  </div>
                 <div id="p3_s3" class="right"><a href="http://127.0.0.1:8000/programs"><img src="../../static/img/program.png"  width="100%" height="100%"> </a> </div>
                 <!-- <div id="p3_x1" class="left">  </div> -->
                 <div id="p3_x2">
@@ -920,13 +920,13 @@ if (option && typeof option === "object") {
 
 <!-- 散点图 -->
 <script type="text/javascript">
-var dom = document.getElementById("p3_s2");
+var dom = document.getElementById(" ");
 var myChart = echarts.init(dom, 'walden');
 var app = {};
 option = null;
 var option = {
     title : {
-        text: "不同评分下评分人数与短评数",
+        text: "不同评分下评分人数与想读人次",
         x:'center'
     },
     grid: {
@@ -1053,6 +1053,47 @@ if (option && typeof option === "object") {
 <!-- p3s2 -->
 <script type="text/javascript">
     var dom = document.getElementById("p3_x3");
+    var myChart = echarts.init(dom, 'walden');
+    var app = {};
+    option = null;
+    option = {
+        tooltip : {
+            trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    legend: {
+        data: [
+        {% for i in score_index1 %}
+        '{{ i.basic }}',
+        {% endfor %}
+        ]
+    },
+    xAxis: {
+        type: 'category',
+        data: ['4分以下','4-5分','5-6分','6-7分','7-8分','8-9分','9分以上']
+    },
+    yAxis: {
+        type: 'value'
+    },
+    series: [
+    {% for i in score_index1 %}
+    {   
+        name: '{{ i.basic }}',
+        type:'line',
+        data:{{ i.data }},
+        smooth: true
+    },
+    {% endfor %}]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+</script>
+<script type="text/javascript">
+    var dom = document.getElementById("p3_x3_show");
     var myChart = echarts.init(dom, 'walden');
     var app = {};
     option = null;
@@ -1287,11 +1328,195 @@ if (option && typeof option === "object") {
 }
 </script>
 
+<script type="text/javascript">
+    var dom = document.getElementById("p2_x2_show");
+    var myChart = echarts.init(dom, 'walden');
+    var app = {};
+    option = null;
+    app.title = '多 Y 轴示例';
 
+    var colors = ['#3fb1e3', '#6be6c1', '#626c91'];
+
+    option = {
+        color: colors,
+
+        tooltip: {
+            trigger: 'axis',
+            axisPointer: {
+                type: 'cross'
+            }
+        },
+        grid: {
+            right: '20%'
+        },
+        toolbox: {
+        // feature: {
+        //     dataView: {show: true, readOnly: false},
+        //     restore: {show: true},
+        //     saveAsImage: {show: true}
+        // }
+    },
+    legend: {
+        data:['平均评分人数','平均已读','平均评分']
+    },
+    xAxis: [
+    {
+        type: 'category',
+        axisTick: {
+            alignWithLabel: true
+        },
+        data: [
+        {% for i in nation %}
+        '{{ i.nation }}',
+        {% endfor %}
+        ]
+    }
+    ],
+    yAxis: [
+    {
+        type: 'value',
+        name: '评分人数',
+        min: 0,
+        max: 1200,
+        position: 'right',
+        axisLine: {
+            lineStyle: {
+                color: colors[0]
+            }
+        },
+        axisLabel: {
+            formatter: '{value}'
+        }
+    },
+    {
+        type: 'value',
+        name: '已读',
+        min: 0,
+        max: 1200,
+        position: 'right',
+        offset: 80,
+        axisLine: {
+            lineStyle: {
+                color: colors[1]
+            }
+        },
+        axisLabel: {
+            formatter: '{value}'
+        }
+    },
+    {
+        type: 'value',
+        name: '评分',
+        min: 0,
+        max: 10,
+        position: 'left',
+        axisLine: {
+            lineStyle: {
+                color: colors[2]
+            }
+        },
+        axisLabel: {
+            formatter: '{value}'
+        }
+    }
+    ],
+    series: [
+    {
+        name:'平均评分人数',
+        type:'bar',
+        data:[
+        {% for i in nation %}
+        {{ i.number }},
+        {% endfor %}
+        ]
+    },
+    {
+        name:'平均已读',
+        type:'bar',
+        yAxisIndex: 1,
+        data:[
+        {% for i in nation %}
+        {{ i.read }},
+        {% endfor %}
+        ]
+    },
+    {
+        name:'平均评分',
+        type:'line',
+        yAxisIndex: 2,
+        data:[
+        {% for i in nation %}
+        {{ i.score }},
+        {% endfor %}
+        ]
+    }
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+</script>
 
 <!--堆积柱状图-->
 <script type="text/javascript">
     var dom = document.getElementById("p3_x2");
+    var myChart = echarts.init(dom,'walden');
+    var app = {};
+    option = null;
+    app.title = '堆叠条形图';
+
+    option = {
+        tooltip : {
+            trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    legend: {
+        data: [
+        {% for i in score_index2 %}
+        '{{ i.basic }}',
+        {% endfor %}
+        ]
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis:  {
+        type: 'value'
+    },
+    yAxis: {
+        type: 'category',
+        data: ['4分以下','4-5分','5-6分','6-7分','7-8分','8-9分','9分以上']
+    },
+    series: [
+    {% for i in score_index2 %}
+    {
+        name:'{{ i.basic }}',
+        type:'bar',
+        stack: '总量',
+        label: {
+            normal: {
+                show: true,
+                position: 'insideRight'
+            }
+        },
+        data:{{ i.data }}
+    },
+    {% endfor %}
+
+    ]
+};;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+</script>
+<script type="text/javascript">
+    var dom = document.getElementById("p3_x2_show");
     var myChart = echarts.init(dom,'walden');
     var app = {};
     option = null;
@@ -1632,10 +1857,141 @@ if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
 </script>
+<script type="text/javascript">
+    var dom = document.getElementById("p2_x1_show");
+    var myChart = echarts.init(dom, 'walden');
+    var app = {};
+    option = null;
+    app.title = '坐标轴刻度与标签对齐';
+
+    option = {
+        color: ['#3398DB'],
+        title:{
+            text:'热门出版社出版数目与平均评分人数',
+            x: 'center'
+        },
+        tooltip : {
+            trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis : [
+    {
+        type : 'category',
+        data : [
+        {% for i in Press_top %}    
+        '{{ i.tags }}',
+        {% endfor %}],
+        axisTick: {
+            alignWithLabel: true
+        }
+    }
+    ],
+    yAxis : [
+    {
+        type : 'value'
+    }
+    ],
+    series : [
+    {
+        name:'出版书籍数',
+        type:'bar',
+        barWidth: '60%',
+        data:[
+        {% for i in Press_top %}    
+        {{ i.num_of_tag }},
+        {% endfor %}
+        ]
+    },
+    {
+        name:'评分人数',
+        type:'line',
+        barWidth: '60%',
+        data:[
+        {% for i in Press_top %}    
+        {{ i.number }},
+        {% endfor %}
+        ]
+    },
+
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+</script>
 
 <!-- 出版社 评分人数 -->
 <script type="text/javascript">
     var dom = document.getElementById("p2_z1");
+    var myChart = echarts.init(dom, 'walden');
+    var app = {};
+    option = null;
+    app.title = '坐标轴刻度与标签对齐';
+
+    option = {
+        color: ['#3398DB'],
+        title:{
+            text:'热门出版社平均评分'
+        },
+        tooltip : {
+            trigger: 'axis',
+        axisPointer : {            // 坐标轴指示器，坐标轴触发有效
+            type : 'shadow'        // 默认为直线，可选为：'line' | 'shadow'
+        }
+    },
+    grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+    },
+    xAxis : [
+    {
+        type : 'category',
+        data : [
+        {% for i in Press_top %}    
+        '{{ i.tags }}',
+        {% endfor %}],
+        axisTick: {
+            alignWithLabel: true
+        }
+    }
+    ],
+    yAxis : [
+    {
+        type : 'value'
+    }
+    ],
+    series : [
+    {
+        name:'评分',
+        type:'bar',
+        barWidth: '60%',
+        data:[
+        {% for i in Press_top %}    
+        {{ i.score }},
+        {% endfor %}
+        ]
+    },
+
+    ]
+};
+;
+if (option && typeof option === "object") {
+    myChart.setOption(option, true);
+}
+</script>
+<script type="text/javascript">
+    var dom = document.getElementById("p2_z1_show");
     var myChart = echarts.init(dom, 'walden');
     var app = {};
     option = null;
